[tool.poetry]
name = "vacasa-poetry-demo"
version = "0.1.0"
description = ""
authors = ["Conrad Cartmell <cwcartmell@gmail.com>"]
readme = "README.md"
packages = [{include = "vacasa_poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
pandas = "^2.0.0"
altair = "^4.2.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
